# RedUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: RedUI.h
include/RedUI/: Animation.h  Menu.h  Remove.h  UIObject.h  UIState.h  Update.h
include/RedUI/Color/: Dropshadow.h  RGB.h
include/RedUI/Components/: Box.h  TextLabel.h
include/RedUI/Event/: Event.h  MouseEvent.h
include/RedUI/Input/: Key.h  Mouse.h
include/RedUI/Math/: Vec2.h  Vec3.h
include/RedUI/Time/: Time.h
src/: RedUI.cpp
src/RedUI/: Remove.cpp  UIObject.cpp  UIState.cpp  Update.cpp
src/RedUI/Color/: Dropshadow.cpp  RGB.cpp
src/RedUI/Components/: Box.cpp  TextLabel.cpp
src/RedUI/Input/: Key.cpp  Mouse.cpp
src/RedUI/Math/: Vec2.cpp  Vec3.cpp
